<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nunez.bancaremota.screens.login.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/colorPrimaryDark" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="Iniciar Sesión"
                android:textAlignment="center"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textAutoComplete|textAutoCorrect"
                android:hint="@string/login_hint_username"
                android:maxLines="1" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:maxLines="1" />

            <Button
                android:id="@+id/loginButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/login_txt_login" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
