<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/ticket_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tickets_label_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ticket_number"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            app:layout_constraintStart_toStartOf="@+id/ticket_number_label"
            app:layout_constraintTop_toBottomOf="@+id/ticket_number_label"
            tools:text="23n92sdf390" />

        <TextView
            android:id="@+id/ticket_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/tickets_label_status"
            app:layout_constraintEnd_toStartOf="@+id/amount"
            app:layout_constraintStart_toEndOf="@+id/ticket_number_label"
            app:layout_constraintTop_toTopOf="@+id/ticket_number_label" />

        <TextView
            android:id="@+id/ticket_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/ticket_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ticket_status_label"
            tools:text="RD$1,2340" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/gamesRecycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticket_status"
            tools:listitem="@layout/item_sales_game" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/payButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_btn_pay" />

            <Button
                android:id="@+id/printButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_btn_print" />
        </LinearLayout>

        <TextView
            android:id="@+id/ticket_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/ticket_status_label"
            app:layout_constraintTop_toBottomOf="@+id/ticket_status_label"
            tools:text="Premiado" />

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>